bbdd - logica - vista gestion de tramites

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\tramites_bv
 index.file=index.php
 run.as=LOCAL
-url=http://localhost/tramites_bv/
+url=http://localhost/
